# EmailCodeServer

./: Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml
src/: code_extractor.rs  config.rs  main.rs  ws_server.rs
src/mailbox/: imap.rs  mod.rs  pop3.rs
